--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -5,7 +5,11 @@
 	<title><%=yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
 </head>
 <body>
-<h1>Sample App</h1>
-<p>This is home page for the <a href="http://www.railstutorial.org/">Ruby on rails Tutorial</a> sample application.</p> 
+<div class="center jumbotron">
+<h1>Welcom to the Sample App</h1>
+<h2>This is home page for the <a href="http://www.railstutorial.org/">Ruby on rails Tutorial</a> sample application.</h2> 
+<%= link_to "Sign up now!", signup_path,class:"btn btn-lg btn-primary" %>
+</div>
+<a href="http://rubyonrails.org/"><img src="/assets/rails-9308b8f92fea4c19a3a0d8385b494526.png" /></a>
 </body>
 </html>
