--- a/sample_app/app/views/users/new.html.erb
+++ b/sample_app/app/views/users/new.html.erb
@@ -1,3 +1,30 @@
 <% provide(:title , 'Sign up') %>
 <h1>Sign up</h1>
-<p>This will be a signup page for new users</p>
+<table float:left>
+<tr>
+  <td><div class="row">
+  <div class="col-md-7 col-md-offset-4">
+    <%= form_for(@user) do |f| %>
+   
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation %>
+
+      <%= f.submit "Sign up", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div></td>
+
+<td width="20%"> <%= render 'shared/error_messages' %>
+</td>
+</tr>
+
+</table>
