--- a/sample_app/app/views/users/index.html.erb
+++ b/sample_app/app/views/users/index.html.erb
@@ -2,9 +2,16 @@
 <h1>All users</h1>
 
 <%= will_paginate %>
-
 <ul class="users">
-  <%= render @users %>
+  <% @users.each do |user| %>
+    <li>
+     <%= gravatar_for user %>
+      <%= link_to user.name, user %>
+      <% if current_user.admin? %> | <%= link_to "delete", user, method: :delete,data: { confirm: "You sure?" } %>
+  <% end %>
+    </li>
+  <% end %>
 </ul>
+
 
 <%= will_paginate %>
